--- a/views/admin/bans.ejs
+++ b/views/admin/bans.ejs
@@ -35,45 +35,67 @@
                     <div class="row">
                         <div class="col-12">
                             <div class="card">
-                                <div class="card-body">
-                                    <div class="card-title">Liste des membres bannis</div>
+                                <div id="table-bans" class="card">
+                                    <div class="card-header">
+                                        <div class="card-title">Liste des membres bannis</div>
+                                    </div>
+                                    <div class="card-body border-bottom py-3">
+                                        <div class="d-flex">
+                                            <div class="ms-auto text-muted">
+                                                Rechercher:
+                                                <div class="ms-2 d-inline-block">
+                                                    <input type="search" class="form-control form-control-sm search">
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <table class="table table-vcenter table-responsive m-0">
+                                        <thead>
+                                            <tr>
+                                                <th><button class="table-sort" data-sort="sort-name">Membre</button></th>
+                                                <th><button class="table-sort" data-sort="sort-banned-by">Banni par</button></th>
+                                                <th><button class="table-sort" data-sort="sort-reason">Raison</button></th>
+                                                <th><button class="table-sort desc" data-sort="sort-ban-date">Date de ban</button></th>
+                                                <th><button class="table-sort" data-sort="sort-unban-date">Date de déban</button></th>
+                                            </tr>
+                                        </thead>
+                                        <tbody class="table-tbody">
+                                            <% if(bans.length === 0) { %>
+                                            <tr>
+                                                <td class="text-center" colspan="5">Aucun membre banni</td>
+                                            </tr>
+                                            <% } %>
+                                            <% for(const ban of bans) { %>
+                                            <tr>
+                                                <td class="sort-name">
+                                                    <div class="d-flex align-items-center">
+                                                        <span class="avatar avatar-sm me-2" style="background-image: url(<%= ban.avatar %>)"></span>
+                                                        <div class="flex-fill">
+                                                            <%= ban.name %>
+                                                        </div>
+                                                    </div>
+                                                </td>
+                                                <td class="sort-banned-by">
+                                                    <div class="d-flex align-items-center">
+                                                        <span class="avatar avatar-sm me-2" style="background-image: url(<%= ban.author.avatar %>)"></span>
+                                                        <div class="flex-fill">
+                                                            <%= ban.author.name %>
+                                                        </div>
+                                                    </div>
+                                                </td>
+                                                <td class="sort-reason"><%= ban.reason %></td>
+                                                <td class="sort-ban-date" data-ban-date="<%= ban.banDate.timestamp %>"><%= ban.banDate.formated %></td>
+                                                <td class="sort-unban-date" data-unban-date="<%= ban.unbanDate.timestamp %>"><%= ban.unbanDate.formated %></td>
+                                            </tr>
+                                            <% } %>
+                                        </tbody>
+                                    </table>
+                                    <% if(bans.length > 0) { %>
+                                    <div class="card-footer d-flex align-items-center border-0">
+                                        <ul class="pagination m-0 ms-auto"></ul>
+                                    </div>
+                                    <% } %>
                                 </div>
-                                <table class="table table-vcenter table-responsive">
-                                    <thead>
-                                        <tr>
-                                            <th>Membre</th>
-                                            <th>Banni par</th>
-                                            <th>Raison</th>
-                                            <th>Date de ban</th>
-                                            <th>Date de déban</th>
-                                        </tr>
-                                    </thead>
-                                    <tbody>
-                                        <% for(const ban of bans) { %>
-                                        <tr>
-                                            <td>
-                                                <div class="d-flex align-items-center">
-                                                    <span class="avatar avatar-sm me-2" style="background-image: url(<%= ban.avatar %>)"></span>
-                                                    <div class="flex-fill">
-                                                        <%= ban.name %>
-                                                    </div>
-                                                </div>
-                                            </td>
-                                            <td>
-                                                <div class="d-flex align-items-center">
-                                                    <span class="avatar avatar-sm me-2" style="background-image: url(<%= ban.author.avatar %>)"></span>
-                                                    <div class="flex-fill">
-                                                        <%= ban.author.name %>
-                                                    </div>
-                                                </div>
-                                            </td>
-                                            <td><%= ban.reason %></td>
-                                            <td><%= ban.banDate %></td>
-                                            <td><%= ban.unbanDate %></td>
-                                        </tr>
-                                        <% } %>
-                                    </tbody>
-                                </table>
                             </div>
                         </div>
                     </div>
@@ -83,7 +105,25 @@
     </div>
 
     <script src="/static/assets/libs/tabler/script.min.js"></script>
+    <script src="/static/assets/libs/list.js/list.min.js"></script>
     <script src="/static/assets/js/app.js"></script>
+    <% if(bans.length > 0) { %>
+    <script>
+        document.addEventListener('DOMContentLoaded', function() {
+            const list = new List('table-bans', {
+                sortClass: 'table-sort',
+                listClass: 'table-tbody',
+                valueNames: [ { attr: 'data-name', name: 'sort-name' }, { attr: 'data-banned-by', name: 'sort-banned-by' }, 'sort-reason', { attr: 'data-ban-date', name: 'sort-ban-date' }, { attr: 'data-unban-date', name: 'sort-unban-date' } ],
+                pagination: {
+                    paginationClass: 'pagination',
+                    innerWindow: 2,
+                    item: '<li class="page-item"><a class="page-link" href="#"></a></li>'
+                },
+                page: 10
+            })
+        })
+    </script>
+    <% } %>
     <% if(login_success !== null) { %><script>showAlert(<%= login_success %>, '<%= login_success ? 'Connexion réussie' : 'Connexion échouée' %>')</script><% } %>
 </body>
 </html>
